syntax = "proto3";

import "google/protobuf/timestamp.proto";
import weak "google/api/annotations.proto";

option go_package = "github.com/Maddosaurus/gotp/gotp";

package gotp;

service gOTP {
    rpc ListEntries(UUID) returns (stream OTPEntry) {
        option (google.api.http) = {
            get:"/v1/gotp/entries/{uuid}"
        };
    }

    rpc AddEntry(OTPEntry) returns (OTPEntry) {
        option (google.api.http) = {
            post:"/v1/gotp/entries"
            body: "*"
        };
    }

    rpc UpdateEntry(OTPEntry) returns (OTPEntry) {
        option (google.api.http) = {
            post:"/v1/gotp/entries/{uuid}"
            body: "*"
        };
    }

    rpc DeleteEntry(OTPEntry) returns (OTPEntry) {
        option (google.api.http) = {
            delete:"/v1/gotp/entries/{uuid}"
        };
    }
}

message UUID {
    // Please use RFC-4122 compliant UUIDs (preferrably v4) only!
    // See https://datatracker.ietf.org/doc/html/rfc4122
    string uuid = 1;
}

message OTPEntry {
    enum OTPType {
        TOTP = 0;
        HOTP = 1;
    }
    OTPType                   type         = 1;
    string                    uuid         = 2;
    string                    name         = 3;
    string                    secret_token = 4; // Please use a 16 char long ASCII upper case for tokens exclusively
    uint64                    counter      = 5;
    google.protobuf.Timestamp update_time  = 6;
}
