syntax = "proto3";

import "google/protobuf/timestamp.proto";
import weak "google/api/annotations.proto";

option go_package = "github.com/Maddosaurus/pallas/pallas";

package pallas;

service otp {
    rpc StreamEntries(ListEntryRequest) returns (stream OTPEntry) {}

    rpc GetAllEntries(ListEntryRequest) returns (GetAllEntriesResponse) {
        option (google.api.http) = {
            get:"/v1/otp/entries"
        };
    }

    rpc GetEntry(UUID) returns (OTPEntry) {
        option (google.api.http) = {
            get:"/v1/otp/entries/{uuid}"
        };
    }

    rpc AddEntry(OTPEntry) returns (OTPEntry) {
        option (google.api.http) = {
            post:"/v1/otp/entries"
            body: "*"
        };
    }

    rpc UpdateEntry(OTPEntry) returns (OTPEntry) {
        option (google.api.http) = {
            post:"/v1/otp/entries/{uuid}"
            body: "*"
        };
    }

    rpc DeleteEntry(OTPEntry) returns (OTPEntry) {
        option (google.api.http) = {
            delete:"/v1/otp/entries/{uuid}"
        };
    }
}

message ListEntryRequest {}

message GetAllEntriesResponse {
    repeated OTPEntry entries = 1;
}

message UUID {
    // Please use RFC-4122 compliant UUIDs (preferrably v4) only!
    // See https://datatracker.ietf.org/doc/html/rfc4122
    string uuid = 1;
}

message OTPEntry {
    enum OTPType {
        TOTP = 0;
        HOTP = 1;
    }
    OTPType                   type         = 1;
    string                    uuid         = 2;
    string                    name         = 3;
    string                    secret_token = 4; // Please use a 16 char long ASCII upper case for tokens exclusively
    uint64                    counter      = 5;
    google.protobuf.Timestamp update_time  = 6;
}
